--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,4 +15,6 @@ storage.productInfoAPI=productinfo
 
 calculator.host=http://localhost
 calculator.port=56667
-calculator.productInfoAPI=vat
+calculator.VatAPI=vat
+
+server.port=56668
