Feature/product details api (#3)
* created class/function stubs for REST API consuming Service classes
created GET mapping "product/{uuid}" in ProductController

* feat: /product/{id} endpoint
moved calculatorAPI and storageAPI relavant files to own package
added application.properties values for storageAPI and calculatorAPI

* extended docker compose to connect to other services

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:postgresql://localhost/
+spring.datasource.url=jdbc:postgresql://localhost:5433/
 spring.datasource.username=admin
 spring.datasource.password=admin
 #spring.jpa.show-sql: true
@@ -8,3 +8,13 @@ sftp.host=127.0.0.1
 sftp.port=10022
 sftp.username=foo
 sftp.password=pass
+
+storage.host=http://localhost
+storage.port=56666
+storage.productInfoAPI=productinfo
+
+calculator.host=http://localhost
+calculator.port=56667
+calculator.VatAPI=vat
+
+server.port=56668
