--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,11 @@
 			<artifactId>springdoc-openapi-ui</artifactId>
 			<version>1.6.6</version>
 		</dependency>
+		<dependency>
+			<groupId>com.hierynomus</groupId>
+			<artifactId>sshj</artifactId>
+			<version>0.32.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
